<resources>
    <string name="app_name">RenatoAlvesDoCouto_MonitoreSeuConsumo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="salvar">Salvar</string>
    <string name="cadastro_resid_ncia">Cadastro Residência</string>
    <string name="cadastro_consumo">Cadastro Consumo</string>
    <string name="nenhuma_residencia_cadastrada">nenhuma residencia cadastrada</string>
    <string name="deletar">deletar</string>
    <string name="editar">editar</string>
    <string name="sobre">Sobre</string>
    <string name="confirmar_exclusao">Confirmar Exclusão</string>
    <string name="realmente_deseja_deletar">"Você realmente deseja deletar "</string>
    <string name="cancelar">Cancelar</string>
    <string name="registro_salvo">Registro Salvo</string>
    <string name="operao_nao_realizada">Operação não Realizada</string>
    <string name="selecione_mes_ano">Selecione o mês e ano</string>
    <string name="erro_consumo_duplicado">ERRO! Já existe um registro para este mês e ano!</string>
    <string name="erro_Exception_consumo">"Erro ao salvar o consumo mensal: "</string>
    <string name="nenhum_consumo_cadastrada">nenhum consumo cadastrada</string>
    <string name="teste">teste</string>
    <string name="campo_m3_vazio">Campo qt m3 não pode estar vazio</string>
    <string name="metros_cubicos_consumidos">Metros Cúbicos Consumidos</string>
    <string name="m_s">Mês</string>
    <string name="ano">Ano</string>
    <string name="economize_agua">Economize Água</string>
    <string name="cone_de_gota_dagua">Ícone de gota d\'água</string>
    <string name="objetivo_do_app">Objetivo do App:</string>
    <string name="ab_app_texto">Registrar o consumo mensal de água, comparar a evolução do consumo, objetivando a redução e o consumo consciente.</string>
    <string name="informacoes_do_projeto">Informações do Projeto:</string>
    <string name="inf_app_texto">Disciplina: Prog. Para Disp. Móveis I\nDocente: Ana Paula Alves G. de Cól\nDiscente: Renato Alves do Couto</string>
    <string name="comecar_economizar_btn">Começar a Economizar</string>
    <string name="nome_da_residencia">Nome da Residência</string>
    <string name="endereco">endereço</string>
    <string name="consumo">Qt M³</string>
    <string name="acoes">Ações</string>
    <string name="nova_residencia">Nova Residencia</string>
    <string name="lista_residencias">Lista Residencias</string>
    <string name="comparar_consumo">Comparar Consumo</string>
    <string name="sair">Sair</string>
    <string name="compara_consumo">Comparação de Consumo</string>
    <string name="primeiro_periodo">Primeiro período</string>
    <string name="segundo_periodo">Segundo Período</string>
    <string name="data_final_deve_ser_maior_que_a_data_inicial">Data final deve ser maior que a data inicial</string>
    <string name="nenhum_dado_para_mes_ano">Nenhum dado encontrado para %1$s/%2$s.</string>
    <string name="resultado_maior">O consumo aumentou significativamente.</string>
    <string name="resultado_menor">O consumo diminuiu significativamente.</string>
    <string name="resultado_normal">O consumo está dentro do esperado.</string>
    <string name="valor_zero">Um dos valores de consumo é zero.</string>
    <string name="erro_verifique_os_dados">Erro, verifique os dados</string>
    <string name="analise">Analise:</string>
    <string name="consumo_do_primeiro_periodo">"Consumo do primeiro período: "</string>
    <string name="consumo_do_segundo_periodo">"Consumo do segundo período: "</string>
    <string name="texto_aumento_1">"Comparando o consumo entre os dois períodos, observa-se um aumento de"</string>
    <string name="texto_aumnto_2">%. Se não houver fatores conhecidos que justifiquem essa elevação, recomenda-se investigar a origem desse incremento no consumo.</string>
    <string name="consumo_normal_1">Comparando o consumo entre os dois períodos, observa-se uma pequena variação de</string>
    <string name="consumo_normal_2">%. Isso é positivo, indicando que você está fazendo um uso mais racional da água. No entanto, continue vigilante!</string>
    <string name="consumo_menor_1">Ótimo trabalho! Sua redução de consumo de água em</string>
    <string name="consumo_menor_2">% é uma conquista significativa. Isso mostra que você está usando os recursos de forma mais eficiente. Continue assim e mantenha o bom trabalho!</string>
    <string name="comparar">Comparar</string>
    <string name="_6_meses">6 meses</string>
    <string name="_12_meses">12 meses</string>
    <string name="evolucao_do_consumo_mensal">Evolução do Consumo Mensal</string>
    <string name="consumo_m3">Consumo (m³)</string>
    <string name="Erro_mes_inexistente">Não existe consumo para um dos meses selecionados</string>
    <string name="aumento_consumo">Atenção! Seu consumo de água aumentou. Economize!</string>
    <string name="consumo_estavel">Seu consumo de água está estável. Continue assim!</string>
    <string name="reducao_consumo">Parabéns! Você reduziu seu consumo de água! Continue economizando!</string>

</resources>