<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.fragmentos.FragmentInformacao">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/economize_agua"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/primaryDarkColor"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/agua_planeta"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/cone_de_gota_dagua"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/objetivo_do_app"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ab_app_texto"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informacoes_do_projeto"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inf_app_texto"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnComecar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/comecar_economizar_btn"
            style="@style/CustonButton"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>