<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.fragmentos.FragmentRelatorios">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGrafico1"
                    style="@style/CustonButtonRelatorio"
                    android:drawableTop="@drawable/grafico_4"
                    android:text="@string/_6_meses" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnGrafico2"
                    style="@style/CustonButtonRelatorio"
                    android:drawableTop="@drawable/grafico_1"
                    android:text="@string/_12_meses" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnComparacao"
                    style="@style/CustonButtonRelatorio"
                    android:drawableTop="@drawable/calendario_2"
                    android:text="@string/comparar" />
            </LinearLayout>


</FrameLayout>