<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:orientation="vertical"
    tools:context=".view.fragmentos.FragmentResidencia">

    <TextView
        android:id="@+id/textViewTituloTela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:textColor="@color/primaryDarkColor"
        android:text="@string/cadastro_resid_ncia" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_school_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        style="@style/CustomTextInputStyle"
        android:hint="@string/nome_da_residencia">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNomeResidencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryDarkColor"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        style="@style/CustomTextInputStyle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/primaryDarkColor"
            android:hint="@string/endereco" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        style="@style/CustonButton"
        android:text="@string/salvar" />



</LinearLayout>