<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".view.fragmentos.FragmentComparacao">


    <TextView
        android:id="@+id/textViewTituloTela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/compara_consumo"
        android:textColor="@color/primaryDarkColor"
        android:textSize="20dp" />

    <!-- Primeiro Período -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        cardview:cardCornerRadius="8dp"
        cardview:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPeriodo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/primeiro_periodo"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_mes1"
                    style="@style/CustomTextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:hint="@string/m_s">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextMes1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:gravity="center_horizontal|center_vertical"
                        android:inputType="none"
                        android:textColor="@color/primaryDarkColor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_ano1"
                    style="@style/CustomTextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:hint="@string/ano">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextAno1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:gravity="center_horizontal|center_vertical"
                        android:inputType="none"
                        android:textColor="@color/primaryDarkColor" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Segundo Período -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        cardview:cardCornerRadius="8dp"
        cardview:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPeriodo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/segundo_periodo"
                android:textColor="@color/primaryDarkColor"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_mes2"
                    style="@style/CustomTextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:hint="@string/m_s">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextMes2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:gravity="center_horizontal|center_vertical"
                        android:inputType="none"
                        android:textColor="@color/primaryDarkColor" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_ano2"
                    style="@style/CustomTextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"

                    android:layout_weight="1"
                    android:hint="@string/ano">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextAno2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:gravity="center_horizontal|center_vertical"
                        android:inputType="none"
                        android:textColor="@color/primaryDarkColor" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Botão de Comparação -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnComparar"
        style="@style/CustonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/comparar" />

    <!-- Resultado da Comparação -->
    <TextView
        android:id="@+id/tViewAnalise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/primaryDarkColor"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="20sp"
        tools:text="@string/analise" />

    <TextView
        android:id="@+id/tViewCons1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/primaryDarkColor"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_vertical"
        android:textSize="16sp"
        tools:text="Consumo do primeiro período: 100" />

    <TextView
        android:id="@+id/tViewCons2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/primaryDarkColor"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        tools:text="Consumo do segundo período: 115" />

    <TextView
        android:id="@+id/tViewRel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/primaryDarkColor"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="16sp"
        android:justificationMode="inter_word"
        tools:text="Comparando o consumo entre os dois períodos, observa-se um aumento de 15%. Se não houver fatores conhecidos que justifiquem essa elevação, recomenda-se investigar a origem desse incremento no consumo." />

</LinearLayout>
